objects/SCP_Certa_GC__Big_Deal_Resource__c.object
<CustomObject>
    <fields>
        <fullName>SCP_Certa_GC__Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Number__c</fullName>
        <label>Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Resource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resource</label>
        <referenceTo>SCP_Certa_GC__Resource__c</referenceTo>
        <relationshipLabel>Big Deal Resource</relationshipLabel>
        <relationshipName>Big_Deal_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cuestionario Big deals</label>
        <referenceTo>SCP_Certa_GC__Big_deals_Survey__c</referenceTo>
        <relationshipLabel>Big Deal Resource</relationshipLabel>
        <relationshipName>Big_Deal_Resource</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__Text__c</fullName>
        <label>Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SCP_Certa_GC__currency__c</fullName>
        <label>currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Big Deal Resource</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Nombre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Big Deal Resource</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>